# TesiReskinner

./: .gitmodules  CMakeLists.txt  Main.cpp  MeshLoader.sln  MeshLoader.vcxproj  MeshLoader.vcxproj.filters  conanfile.txt  installer.sh
Animations/Nonna/Capoeira/: Capoeira.dae
Animations/Nonna/Flair/: Flair.dae
Animations/Topo/Rumba Topo/: Rumba Dancing.dae
Shaders/: animated_model_loading.fs  animated_model_loading.gs  animated_model_loading.vs  bb.fs  bb.vs  floor.vs  framebuffer.frag  grey_model.fs  grey_model.vs  influence_of_single_bone.fs  influence_of_single_bone.vs  mouse_shader.fs  mouse_shader.vs  no_lighting_shader.fs  no_lighting_shader.vs  normal_visualizer.fs  normal_visualizer.gs  normal_visualizer.vs  num_bones_visualization.vs  screen_shader.fs  screen_shader.vs  selected.fs  selected.vs  smooth_lighting_shader.fs  smooth_lighting_shader.vs  wireframe.fs  wireframe.vs
cmake/: FindGLM.cmake.txt
scripts/win/: all.bat  configure.bat
src/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  AssimpNodeData.h  Bone.cpp  Bone.h  BoneInfo.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Camera.cpp  Camera.h  Change.cpp  Change.h  Face.h  FrameBuffer.cpp  FrameBuffer.h  GUI.cpp  GUI.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Ray.cpp  Ray.h  Shader.cpp  Shader.h  StatusManager.cpp  StatusManager.h  Texture.h  TextureManager.cpp  TextureManager.h  Utility.cpp  Utility.h  Vertex.h  VertexBoneData.h  Window.cpp  Window.h  assimp_glm_helpers.h  (+1 more)
